local development setting

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,9 @@ dependencies = [
     "starlette>=0.40.0,<0.46.0",
     "pydantic>=1.7.4,!=1.8,!=1.8.1,!=2.0.0,!=2.0.1,!=2.1.0,<3.0.0",
     "typing-extensions>=4.8.0",
+    "mkdocs>=1.6.1",
+    "typer>=0.15.1",
+    "ruff>=0.9.3",
 ]
 
 [project.urls]
